[package]
name = "poa"
version = "0.8.0"
authors = ["Dock.io"]
edition = "2021"
license = 'Apache-2.0'

[dependencies]
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.2'

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-authority-discovery]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-application-crypto]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dev-dependencies.balances]
default-features = false
package = 'pallet-balances'
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-npos-elections]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    "sp-api/std",
    'sp-io/std',
    'serde',
    'sp-arithmetic/std',
    "scale-info/std",
    "sp-authority-discovery/std",
    'sp-npos-elections/std',
    'sp-application-crypto/std'
]

test = ['std', 'balances/std']
