[package]
name = "price_feed"
version = "0.0.1"
authors = ["Dock.io"]
edition = "2018"
license = 'Apache-2.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dev-dependencies]
hex = '0.4.2'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.frame-support]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.frame-system]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-std]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-core]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-api]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-evm]
default-features = false
version = '3.0.0'
git = 'https://github.com/paritytech/frontier.git'
rev = 'ed80fba7abbcfa27cf232b05b129b63247b61088'
#path = '../../../../frontier/frame/evm'

[dependencies.common]
path = '../../common'
version = '0.0.1'

[dev-dependencies.balances]
package = 'pallet-balances'
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.timestamp]
package = 'pallet-timestamp'
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.sp-io]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[features]
default = ['std']
std = [
    'codec/std',
    'serde',
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'sp-std/std',
    'sp-runtime/std',
    'sp-api/std',
    'pallet-evm/std',
]
