[package]
name = "price_feed"
version = "0.0.1"
authors = ["Dock.io"]
edition = "2021"
license = "Apache-2.0"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
hex = "0.4.2"

[dependencies.scale-info]
version = "2.1.2"
default-features = false
features = ["derive"]

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.1.5"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.119"

[dependencies.frame-support]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.frame-system]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-runtime]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-std]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-core]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.sp-api]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dependencies.pallet-evm]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
branch = "polkadot-v0.9.29"
# path = "../../../../frontier/frame/evm"

[dependencies.common]
path = "../../common"
version = "0.0.1"

[dev-dependencies.balances]
package = "pallet-balances"
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dev-dependencies.timestamp]
package = "pallet-timestamp"
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-io]
default-features = false
# version = "3.0.0"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.29"

[features]
default = ["std"]
std = [
    "scale-info/std",
    "codec/std",
    "serde",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-api/std",
    "pallet-evm/std",
]
