[package]
name = "simple_democracy"
version = "0.0.2"
authors = ["Dock.io"]
edition = "2018"
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-support]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.frame-system]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-membership]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-collective]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-democracy]
package = 'forked-pallet-democracy'
default-features = false
path = '../democracy'
version = '2.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.poa]
default-features = false
path = '../poa'
version = '0.6.0'

[dev-dependencies.balances]
default-features = false
version = '3.0.0'
package = 'pallet-balances'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.pallet-scheduler]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.sp-core]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.sp-io]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.pallet-session]
default_features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.pallet-authorship]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[features]
default = ['std']
std = [
    'codec/std',
    'serde',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'pallet-collective/std',
    'pallet-membership/std',
    'pallet-democracy/std',
    'poa/std',
]
test = [
    'std',
    'sp-core/std',
    'sp-io/std',
    'pallet-scheduler/std',
    'balances/std',
    'pallet-session/std',
    'pallet-authorship/std',
]