[package]
name = "staking_rewards"
version = "0.2.0"
authors = ["Dock.io"]
edition = "2018"
license = 'Apache-2.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.frame-support]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.frame-system]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-api]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-staking]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-staking-reward-curve]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.poa]
default-features = false
path = '../poa'
version = '0.7.0'

[dev-dependencies.sp-io]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.sp-core]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.balances]
package = 'pallet-balances'
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.pallet-session]
default_features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dev-dependencies.pallet-authorship]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[features]
default = ['std']
std = [
    'codec/std',
    'serde',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-api/std',
    'pallet-staking/std',
    'poa/std',
]