[package]
name = "token_migration"
version = "0.1.2"
authors = ["Dock.io"]
edition = "2018"
license = 'Apache-2.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.frame-support]
default-features = false
version = '2.0.1'

[dependencies.frame-system]
default-features = false
version = '2.0.1'

[dependencies.sp-std]
default-features = false
version = '2.0.1'

[dependencies.frame-benchmarking]
optional = true
default-features = false
version = '2.0.1'

[dependencies.frame-system-benchmarking]
optional = true
default-features = false
version = '2.0.1'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.1'

[dev-dependencies.sp-core]
default-features = false
version = '2.0.1'

[dev-dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.1'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-std/std',
]
test = ['std', 'balances/std']
runtime-benchmarks = [
	"frame-benchmarking",
    "frame-system/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
]