[package]
name = "core_mods_rpc"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }
thiserror = "1.0"
codec = { package = "parity-scale-codec", version = "3.1.5" }
jsonrpc-core = "15.1.0"
jsonrpc-core-client = "15.1.0"
jsonrpc-derive = "15.1.0"
serde = { version = "1.0.119", features = ["derive"] }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25" }
core_mods = { version = '0.5.0', path = '..' }
