[package]
name = "fiat_filter_rpc"
version = "0.0.2"
authors = ["Dock.io"]
edition = "2021"

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
thiserror = "1.0"

sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29"}
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29" }

fiat_filter_rpc_runtime_api = { version = "0.0.1", path="./runtime_api"}