[package]
name = "poa_rpc"
version = "0.0.5"
authors = ["Dock.io"]
edition = "2018"
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
serde = { version = "1.0.101", features = ["derive"], optional = true }
sp-rpc = { version = '3.0.0' }
sp-runtime = { version = '3.0.0' }
sp-api = { version = '3.0.0' }
sp-blockchain = { version = '3.0.0' }
poa = { version = '0.6.2', path = '..' }