[package]
name = "poa_rpc"
version = "0.1.0"
authors = ["Dock.io"]
edition = "2021"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
thiserror = "1.0"
codec = { package = "parity-scale-codec", version = "3.1.5" }
serde = { version = "1.0.119", features = ["derive"], optional = true }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
poa = { version = "0.8.0", path = ".." }