[package]
name = "staking_rewards_rpc"
version = "0.0.1"
authors = ["Dock.io"]
edition = "2021"
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5" }
jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
thiserror = "1.0"
serde = { version = "1.0.119", features = ["derive"], optional = true }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28"}
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
staking_rewards = { version = '0.2.0', path = '..' }
