[package]
name = "fiat_filter_rpc_runtime_api"
version = "0.0.1"
authors = ["Dock.io"]
edition = "2018"


[dependencies]
sp-api = { default-features = false, version = '2.0.1', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { default-features = false, version = '2.0.1', git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
codec = { package = 'parity-scale-codec', version = '1.3.6', default-features=false, features=['derive'] }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-runtime/std',
    'sp-api/std',
]
